<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Humidor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="add">Add</string>
    <string name="addCigar">Add Cigar</string>
	<string name="brand">Brand</string>
	<string name="cancel">Cancel</string>
	<string name="clear">Clear</string>
	<string name="cigarLabel"></string>
	<string name="cigarQuantityLabel"></string>
    <string name="cigarInfo">Cigar Info</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="inventory">ABC</string>
    <string name="menu_settings">Settings</string>
    <string name="newCigar">New Cigar</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="vitola">Vitola</string>
    <string name="wrapper">Wrapper</string>    

</resources>