<?xml version="1.0" encoding="utf-8"?>

<!--
	@author Donald Lee	
 --> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <!-- Title: Cigar Info -->
    <TextView
        android:id="@+id/textView_newCigar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:padding="15dp"
        android:text="@string/newCigar"
        android:textSize="25sp" />
	
    <!-- Brand Name text field -->
    <EditText
        android:id="@+id/editText_Brand"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/brand" 
        android:inputType="text"
        android:textSize="15sp" />
	
	<!-- Type text field -->
    <EditText
        android:id="@+id/editText_Type"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/type"
        android:inputType="text"
        android:textSize="15sp" />
	
	<!-- Vitola text field -->
    <EditText
        android:id="@+id/editText_Vitola"
		android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/vitola"
        android:inputType="text"
        android:textSize="15sp" />
	
	<!-- Wrapper text field -->
    <EditText
        android:id="@+id/editText_Wrapper"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/wrapper"
        android:inputType="text"
        android:textSize="15sp" />
	
	<!-- Quantity text field -->
    <EditText
        android:id="@+id/editText_Quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textSize="15sp" />
    
   	<!-- Add Button -->
	<Button
	    android:id="@+id/button_Add"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
	    android:text="@string/add"
	    android:textSize="18sp" />
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >
        
		<!-- Clear Button -->
		<Button
		    android:id="@+id/button_Clear"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:text="@string/clear"
		    android:textSize="18sp"
		    android:onClick="onClick" />
		
		<!-- Cancel Button -->
		<Button
		    android:id="@+id/button_Cancel"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:text="@string/cancel"
		    android:textSize="18sp"
		    android:onClick="onClick" />
	</LinearLayout>
    
</LinearLayout>